# voice-prompt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release-macos.yml  release-windows.yml  release.yml  update-homebrew.yml
scripts/: generate-icons.js
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/macos/: icon.icns
src-tauri/icons/windows/: README.md
src-tauri/installer/: Install Voice Prompt.command
src-tauri/src/: lib.rs  main.rs
src/components/: History.tsx  LanguageSelect.tsx  MainView.tsx  MyPrompts.tsx  PromptSelect.tsx  Recorder.tsx  ResultCard.tsx  Settings.tsx
src/components/icons/: index.tsx
src/hooks/: useAudioRecorder.ts  useGlobalShortcut.ts
src/lib/: openai.ts  secureStorage.ts
src/prompts/: index.ts
src/stores/: appStore.ts
src/styles/: index.css
